2002-02-12  Anders Carlsson  <andersca@gnu.org>

	* gnome-app-helper.c (install_menuitem_hint_to_statusbar): 
	Cast correctly.

	* gnome-mdi.c (set_active_view): Remove debug printout.

	* gnome-about.c (gnome_about_display_credits_dialog): No need 
	to call gtk_dialog_run here.

2002-02-11  jacob berkman  <jacob@ximian.com>

	* gnome-app-helper.c (do_ui_signal_connect):
	s/g_signal_connect_full/g_signal_connect_closure_by_id/

2002-02-11  Anders Carlsson  <andersca@gnu.org>

	* pixmaps/stock_menu_about.png: Use nicer icon.

	* gnome-icon-item.c (gnome_icon_text_item_draw): Use base_gc.

	* gnome-ui-init.c (libgnomeui_pre_args_parse): Remove setlocale hack.

2002-02-11  Jorn Baayen  <jorn@nl.linux.org>

	* libgnomeui/gnome-icon-item.c: use base_gc rather than bg_gc to
	draw the background color of the selected item.

2002-02-11  Iain Holmes  <iain@ximian.com>

	* gnome-popup-menu.c (gnome_popup_menu_attach): Add GDK_KEY_PRESS_MASK
	to the ev_widget. Connect to the popup-menu signal.
	(popup_menu_pressed): Call the real_popup_button_pressed function with
	ev == NULL.

2002-02-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-about.c: Use a separate credits dialog, also fix some bugs.

	* gnome-pixmap-entry.c: Update to account for GtkFileSel changes.

	* gnome-dateedit.c: Remove broken forall function.

2002-02-10  Anders Carlsson  <andersca@gnu.org>

	* gnome_segv.c: Apply patch from Shingo Akagaki to make gnome_segv UTF-8 safe,
	also make program name UTF-8 safe.

	* gnome-ui-init.c (libgnomeui_post_args_parse): Call gnome_stock_icons_init
	after setting the codeset.
	(libgnomeui_rc_parse): rc files are called gtkrc-2.0 now.

	* gnome-stock-icons.c (get_default_icons): Actually add the
	GNOME_STOCK_MAIL_NEW and GNOME_STOCK_BOOK_OPEN to the icon factory.

	* gnome-ui-init.c (libgnomeui_post_args_parse): 
	Call bind_textdomain_codeset.

2002-01-16  Richard Hult  <rhult@codefactory.se>

	* gnome-app-helper.c (gnome_app_setup_toolbar): Remove unused
	variable.
