@@ -1,3 +1,8 @@
+2002-02-13  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-about.c (gnome_about_display_credits_dialog): Put 
+	credits into a GtkNotebook.
+
 2002-02-12  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-app-helper.c (install_menuitem_hint_to_statusbar): 
